--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -2,6 +2,7 @@ spring:
     datasource:
         name: recommend
         host: localhost
+        dbport: 3306
         url: jdbc:mysql://localhost:3306/recommend
         username: root
         password: 123456
@@ -21,6 +22,14 @@ spring:
         testOnReturn: false
         poolPreparedStatements: true
         maxOpenPreparedStatements: 20
-        
+    redis:
+        host: localhost
+        password: 
+        port: 6379
+        pool:
+          max-idle: 100
+          min-idle: 1
+          max-active: 1000
+          max-wait: -1
 mybatis: 
     mapperLocations: classpath:mapper/*.xml
